Update logo and title name

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/Pool-3-ball.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pool Tracker</title>
+    <title>CueUp</title>
   </head>
   <body>
     <div id="app"></div>
